netcfg (1.138) UNRELEASED; urgency=medium

  [ Hendrik Brueckner ]
  * common/ipaddr: remove leading and trailing whitespaces
  * static: trim user-specified values for IP and other addresses
  * Closes: #818611, LP: #1541955

 -- Dimitri John Ledkov <xnox@ubuntu.com>  Wed, 30 Mar 2016 12:13:56 +0100

netcfg (1.137) unstable; urgency=medium

  [ Colin Watson ]
  * Use HTTPS for Vcs-* URLs, and link to cgit rather than gitweb.

 -- Christian Perrier <bubulle@debian.org>  Tue, 02 Feb 2016 07:02:48 +0100

netcfg (1.136) unstable; urgency=medium

  * Fix confusing indentation pointed out by GCC 6 (closes: #811589).

 -- Colin Watson <cjwatson@debian.org>  Wed, 20 Jan 2016 13:43:39 +0000

netcfg (1.135) unstable; urgency=medium

  [ Philipp Kern ]
  * ethtool-lite: read the kernel's carrier detection result from sysfs
    on Linux (Closes: #591012)
  * Default wireless_security_type to WPA. (Closes: #798373)

 -- Christian Perrier <bubulle@debian.org>  Tue, 03 Nov 2015 14:03:53 +0100

netcfg (1.134) unstable; urgency=medium

  * Fix is_layer3_qeth on s390x to avoid bailing out if the network
    driver is not qeth. (Closes: #798376)
  * Link against libsubunit to resolve a FTBFS.

 -- Philipp Kern <pkern@debian.org>  Mon, 17 Aug 2015 17:12:10 +0200

netcfg (1.133) unstable; urgency=medium

  [ Samuel Thibault ]
  * Work around bug #769189: make isc-dhcp only try to release the lease once,
    otherwise it loops in the ipv6 code.

 -- Christian Perrier <bubulle@debian.org>  Wed, 01 Jul 2015 07:25:29 +0200

netcfg (1.132) unstable; urgency=medium

  [ Updated translations ]
  * Portuguese (Brazil) (pt_BR.po) by Adriano Rafael Gomes
  * Turkish (tr.po) by Mert Dirik

 -- Christian Perrier <bubulle@debian.org>  Thu, 25 Jun 2015 15:11:32 +0200

netcfg (1.131) unstable; urgency=medium

  * Kill the DHCP client on Linux again and keep it running on kFreeBSD.
    This unbreaks network configuration on Linux when a DHCPv6 server is