@@ -5,6 +5,9 @@ netcfg (1.138) UNRELEASED; urgency=medium
   * static: trim user-specified values for IP and other addresses
   * Closes: #818611, LP: #1541955
 
+  [ Dimitri John Ledkov ]
+  * dhcp.c: check return result of two more fgets calls
+
  -- Dimitri John Ledkov <xnox@ubuntu.com>  Wed, 30 Mar 2016 12:13:56 +0100
 
 netcfg (1.137) unstable; urgency=medium
